[package]
name = "cli_gui"
version = "0.1.1"
authors = ["luca Biendl <b.lucab1211@gmail.com>"]
license = "GPL-3.0"
description = "A simple rust cross-platform libary designed for simple guis completely in cli"
repository = "https://github.com/BrunoWallner/cli_gui"
documentation = "https://github.com/BrunoWallner/cli_gui/blob/main/Documentation.md"
readme = "README.md"

keywords = ["simple", "cli", "gui"]

exclude = [
    "pictures/*"
]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
colored = "2.0.0"
rand = "0.8.3"
